After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707352 - Fails to detect Unity platform
Fails to detect Unity platform
Status: RESOLVED FIXED
Product: yelp
Classification: Applications
Component: General
unspecified
Other Linux
: High major
: ---
Assigned To: Yelp maintainers
Yelp maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-03 08:40 UTC by Kevin Godby
Modified: 2013-09-03 12:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (799 bytes, patch)
2013-09-03 08:40 UTC, Kevin Godby
none Details | Review

Description Kevin Godby 2013-09-03 08:40:55 UTC
Created attachment 253930 [details] [review]
Patch

When running Unity under Ubuntu, yelp fails to detect platform:unity and instead detects platform:gnome-shell.

When running Unity under Ubuntu, there is still an org.gnome.Shell dbus session. This means that both env_shell and env_unity are TRUE (libyelp/yelp-settings.c, yelp_settings_constructed() function).

When we get to the if..then block starting on line 323 of libyelp/yelp-settings.c, we see that env_shell is TRUE and store that setting. We never make it to the else-if-env_unity branch.

Swapping the order of the env_shell and env_unity checks resolves this issue.
Comment 1 Shaun McCance 2013-09-03 12:59:37 UTC
Fixed in master. Thanks.