Correctly detect Unity for conditional processing

Unity provides the org.gnome.Shell DBus interface, so it wasn't
getting detected because Yelp assumed it was GNOME Shell.

https://bugzilla.gnome.org/show_bug.cgi?id=707352